fix #819 Fix deprecated calls.